--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^0.21.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
